# skyfall-c

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/001-cube/: CMakeLists.txt
examples/001-cube/src/: main.c
include/: types.h
include/glad/: glad.h
include/skyfall/: application.h
include/skyfall/core/: init.h  window.h
src/: application.c  glad.c  log.c
src/core/: init.c  window.c
